--- a/local-docker-compose-CeleryExecutor.yml
+++ b/local-docker-compose-CeleryExecutor.yml
@@ -16,7 +16,7 @@ services:
         #     - ./pgdata:/var/lib/postgresql/data/pgdata
 
     webserver:
-        build: .
+        image: 781327374347.dkr.ecr.eu-west-1.amazonaws.com/enx-dataschience-airflow:latest
         restart: always
         depends_on:
             - postgres
