--- a/dev.yml
+++ b/dev.yml
@@ -26,6 +26,7 @@ services:
             - ./tasks:/usr/local/airflow/tasks
             - ~/.aws:/usr/local/airflow/.aws
             - ./init:/init
+            - ./modules:/modules/modules
         ports:
             - "80:8080"
         command: webserver
