--- a/dev.yml
+++ b/dev.yml
@@ -8,7 +8,7 @@ services:
             - POSTGRES_DB=airflow
 
     webserver:
-        image: 781327374347.dkr.ecr.eu-west-1.amazonaws.com/enx-dataschience-airflow:latest
+        image: ritchie46/enx-airflow
         restart: always
         depends_on:
             - postgres
