--- a/dev.yml
+++ b/dev.yml
@@ -8,7 +8,8 @@ services:
             - POSTGRES_DB=airflow
 
     webserver:
-        image: ritchie46/enx-airflow
+        build: .
+#        image: ritchie46/enx-airflow
         restart: always
         depends_on:
             - postgres
