--- a/config/airflow.cfg
+++ b/config/airflow.cfg
@@ -1,6 +1,4 @@
 [core]
-# The home folder for airflow, default is ~/airflow
-airflow_home = /usr/local/airflow
 
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository
@@ -50,7 +48,7 @@ default_timezone = utc
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor
-executor = SequentialExecutor
+executor = LocalExecutor
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
@@ -102,7 +100,7 @@ max_active_runs_per_dag = 16
 # Whether to load the examples that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
 # environment
-load_examples = True
+load_examples = False
 
 # Where your Airflow plugins are stored
 plugins_folder = /usr/local/airflow/plugins
@@ -117,7 +115,7 @@ donot_pickle = False
 dagbag_import_timeout = 30
 
 # The class to use for running task instances in a subprocess
-task_runner = BashTaskRunner
+task_runner = StandardTaskRunner
 
 # If set, tasks without a `run_as_user` argument will be run with this user
 # Can be used to de-elevate a sudo user running Airflow when executing tasks
