edited yml for windows

--- a/dev.yml
+++ b/dev.yml
@@ -24,10 +24,10 @@ services:
             - ./tasks:/usr/local/airflow/tasks
             - ~/.aws:/usr/local/airflow/.aws
             - ./modules:/modules/modules
-            # Comment out the line below on windows.
-            - ./init:/init
+            # Comment out the line belowe on windows.
+            # -  ./init:/init
         ports:
-            - "80:8080"
+            - "8080:8080"
         command: /init/entrypoint.sh
         healthcheck:
             test: ["CMD-SHELL", "[ -f /usr/local/airflow/airflow-webserver.pid ]"]
