--- a/dev.yml
+++ b/dev.yml
@@ -13,6 +13,7 @@ services:
         depends_on:
             - postgres
         environment:
+            # Don't specify FERNET key in plain text in production.
             - FERNET_KEY=qEmHuWobGHr2voNE06ab7QPX14QzUTxcpD1IFhepV-I=
             - AWS_DEFAULT_REGION=eu-west-1
             - AIRFLOW_USERNAME=dev
