--- a/dev.yml
+++ b/dev.yml
@@ -20,6 +20,7 @@ services:
             - AWS_DEFAULT_REGION=eu-west-1
             - AIRFLOW_USERNAME=dev
             - AIRFLOW_PASSWORD=dev
+            - ENX_PRODUCTION=1
         volumes:
             - ./dags:/usr/local/airflow/dags
             - ./config:/config
