--- a/dev.yml
+++ b/dev.yml
@@ -28,8 +28,9 @@ services:
             - ./tasks:/usr/local/airflow/tasks
             - ~/.aws:/usr/local/airflow/.aws
             - ./modules:/modules/modules
-            # Comment out the line belowe on windows.
-            # -  ./init:/init
+            # Comment out the line below on windows.
+            - ./init:/init
+
         ports:
             - "8080:8080"
         command: /init/entrypoint.sh
